@@ -1,0 +1,12 @@
+#!/usr/bin/make -f
+
+include /usr/share/cdbs/1/rules/debhelper.mk
+include /usr/share/cdbs/1/class/maven.mk
+
+JAVA_HOME := /usr/lib/jvm/default-java
+#if ($project.Packaging == "pom")
+DEB_MAVEN_DOC_TARGET := javadoc:javadoc javadoc:aggregate
+#end
+
+get-orig-source:
+	uscan --download-current-version --force-download --no-symlink
